# armnn

./: .gitignore
src/armnn/: Profiling.cpp
src/backends/hexagon/: CMakeLists.txt  HexagonBackend.cpp  HexagonBackend.hpp  HexagonBackendId.hpp  HexagonLayerSupport.cpp  HexagonLayerSupport.hpp  HexagonWorkloadFactory.cpp  HexagonWorkloadFactory.hpp  backend.cmake  backend.mk
src/backends/hexagon/test/: CMakeLists.txt  RefJsonPrinterTests.cpp
src/backends/hexagon/workloads/: Broadcast.cpp  Broadcast.hpp  CMakeLists.txt  Debug.cpp  Debug.hpp  ElementwiseFunction.cpp  HexagonComparisonWorkload.cpp  HexagonComparisonWorkload.hpp  HexagonDebugWorkload.cpp  HexagonDebugWorkload.hpp  HexagonElementwiseWorkload.cpp  HexagonElementwiseWorkload.hpp  HexagonStringMapping.cpp  HexagonStringMapping.hpp  HexagonWorkloads.hpp  Maximum.hpp  Minimum.hpp
tests/: CMakeLists.txt
